# jamanota-energy-middleware

./: .readthedocs.yaml  README.md  README.rst  agents.py  app.py  context_var.py  main.py  middleware.py  pyproject.toml  reporting.py
docs/source/: requirements.txt
source/: conf.py  index.rst  tutorial.rst
src/energy_middleware/: energy_estimation_model.py
tutorials/: streamlit_visualisation.py
